--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,13 +23,14 @@
     "@types/node": "^22.13.4",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.4.0",
+    "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.20.1",
-    "eslint-plugin-vue": "^9.32.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-vue": "^9.33.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
-    "prettier": "^3.5.1",
+    "prettier": "^3.5.3",
     "typescript": "~5.7.3",
     "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.2",
