--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.2",
     "material-icons": "^1.13.14",
     "pinia": "^3.0.1",
+    "sass": "^1.86.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
